# flappy-bird

./: main.py  pyproject.toml
