[tool.poetry]
name = "flappy-bird"
version = "0.1.0"
description = "Flappy bird clone"
authors = ["Matej Buocik <matej.buocik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
